fix(race): assets distortion
- fix race background

--- a/css/carStyle.css
+++ b/css/carStyle.css
@@ -54,7 +54,7 @@
    left     : 189px;
 }
 
-.race-decal-crv {
+.race-decal-crv-1 {
     width : 250px;
     top   : 0;
     left  : -1px;
@@ -62,15 +62,17 @@
 }
 
 .race-decal-crv-2 {
-    width : 229px;
-    top   : -5px;
-    left  : 10px;
+    width : 250px;
+    top   : 0;
+    left  : -1px;
+    z-index : 1;
 }
 
 .race-decal-crv-3 {
-    width : 229px;
-    top   : -5px;
-    left  : 10px;
+    width : 250px;
+    top   : 0;
+    left  : -1px;
+    z-index : 1;
 }
 
 .car-congrats-tint-crv {
@@ -87,7 +89,7 @@
 
 .car-congrats-spoiler-crv {
     width : 700px;
-    top   : 29px;
+    top   : 32px;
     left  : 22px;
 }
 
@@ -103,7 +105,7 @@
     left  : 526px;
 }
 
-.car-congrats-decal-crv {
+.car-congrats-decal-crv-1 {
     width   : 700px;
     top     : 0;
     z-index : 1;
@@ -111,7 +113,8 @@
 
 .car-congrats-decal-crv-2 {
     width   : 700px;
-    top     : 0;
+    top     : 8px;
+    left    : 1px;
     z-index : 1;
 }
 
@@ -154,23 +157,23 @@
     left     : 188px;
 }
 
-.race-decal-city {
+.race-decal-city-1 {
     width   : 250px;
     top     : 8px;
-    left    : -1px;
+    left    : 1px;
     z-index : 1;
 }
 
 .race-decal-city-2 {
-    width   : 250px;
-    top     : 0;
-    left    : -1px;
+    width   : 245px;
+    top     : 9px;
+    left    : 3px;
     z-index : 1;
 }
 
 .race-decal-city-3 {
     width   : 250px;
-    top     : 0;
+    top     : 9px;
     left    : -1px;
     z-index : 1;
 }
@@ -205,24 +208,24 @@
     left  : 526px;
 }
 
-.car-congrats-decal-city {
-    width   : 700px;
+.car-congrats-decal-city-1 {
+    width   : 690px;
     top     : 26px;
-    left    : 0;
+    left    : 6px;
     z-index : 1;
 }
 
 .car-congrats-decal-city-2 {
     width   : 700px;
     top     : 26px;
-    left    : 0;
+    left    : 6px;
     z-index : 1;
 }
 
 .car-congrats-decal-city-3 {
     width   : 700px;
     top     : 26px;
-    left    : 0;
+    left    : 3px;
     z-index : 1;
 }
 
@@ -257,7 +260,7 @@
     left  : 189px;
 }
 
-.race-decal-jazz {
+.race-decal-jazz-1 {
     width   : 250px;
     top     : 5px;
     left    : 0;
@@ -309,23 +312,23 @@
     left  : 529px;
 }
 
-.car-congrats-decal-jazz {
+.car-congrats-decal-jazz-1 {
     width   : 700px;
     top     : 14px;
-    left    : -1px;
+    left    : 0;
     z-index : 1;
 }
 
 .car-congrats-decal-jazz-2 {
     width   : 700px;
     top     : 14px;
-    left    : -1px;
+    left    : 0;
     z-index : 1;
 }
 
 .car-congrats-decal-jazz-3 {
     width   : 700px;
     top     : 14px;
-    left    : -1px;
+    left    : 0;
     z-index : 1;
 }
